@startuml
    ' Presentation Layer
    package "Presentation" {
        class ToDosPage {
            -toDosWidget: ToDosWidget
            +render()
        }

        class ToDosWidget {
            +render(): UIElement
        }

        class VToDoCard {
            -todoCard: ToDoCard
            +render(): UIElement
        }

        class VGrid {
            -items: VToDoCard[]
            +render(): UIElement
        }
    }

    ' Domain Layer
    package "Domain" {
        class ToDoCard {
            -id: string
            -title: string
            -description: string
            -completionDatePlanned: Date
            -completionDateActual: Date
            +render(): UIElement
        }

        class ToDoData {
            -id: string
            -title: string
            -description: string
            -completionDatePlanned: Date
            -completionDateActual: Date
        }

        class ToDoElementsFactory {
            +createToDoCard(data: ToDoData): ToDoCard
        }

        class UIElement {
            +getRenderFunction(): Function
            +getVNode(): VNode
        }

        class ToDo {
            +string id
            +string title
            +string description
            +Date completionDatePlanned
            +Date completionDateActual            
            +getData(): ToDoData
        }

        class ToDosOwner {
            +getToDoById(id: string): ToDo
            +getAllToDos(): ToDo[]
            +saveToDo(toDo: ToDo)
            +removeToDo(toDo: ToDo)
        }

        class ToDosOwnerBase {
            -service: ToDosRepository
        }
        
        class ToDosService {
            -owner: ToDosOwner
            +getAllToDosData(): ToDoData[]
        }
    }

    ' Data Layer
    package "Data" {
        class ToDosRepository {
            +addToDoAsync(data: AddToDoDto): Promise~ToDo~
            +updateToDoAsync(data: UpdateToDoDto): Promise~void~
            +getToDoByIdAsync(id: string): Promise~ToDo~
            +getAllToDosAsync(): Promise~ToDo[]~
            +removeToDoAsync(id: string): Promise~void~
        }
    }

    ' Зависимости между слоями
    ToDosPage --> ToDosWidget : uses
    ToDosWidget --> ToDosService : uses
    ToDoCard --> VToDoCard : creates
    VToDoCard --> ToDoCard : uses
    ToDosWidget --> VGrid : renders
    ToDosService --> ToDosOwner : depends on
    ToDosService --> ToDo : depends on
    ToDosWidget --> ToDoElementsFactory : uses
    ToDosWidget --> ToDoCard : renders
    ToDoElementsFactory --> ToDoCard : depends on
    ToDosOwnerBase --> ToDosRepository : depends on
    ToDo --> ToDosOwner : for saving changes
    ToDo --> ToDoData : depends on
    ToDoCard <|-- UIElement
    ToDosOwnerBase <|-- ToDosOwner : depends on
@enduml
